# Masters

./: .gitignore  CMakeLists.txt  README.md  run_log.txt
analysis/ProtonAnalysis/: CMakeLists.txt  makeHists.cpp
analysis/filelink/: CMakeLists.txt  allisotopes.root  combined.root  combined_Emult.root  filelink.cpp
analysis/genanalysis/: CMakeLists.txt  aboveban.cfg  alphas.cfg  bananaexplorer.cfg  bananas.cfg  gamma.cfg  mainanalyzer.cpp  protongammas.cfg  singleprotons.cfg  twoproton.cfg
analysis/genanalysis/include/: AnalysisConfig.h  Cut.h  Detector_frib.h  GeneralAnalysis.h  Hit.h  U1analysis.h  gCut.h
analysis/padcal/: CMakeLists.txt  PadCalibration.cpp  README  fitter.cpp  padcalc.cfg  padmatcher.cfg  source.json
analysis/padcal/include/: AnalysisConfig.h  CalibrationAnalysis.h  Cut.h  gCut.h
analysis/python/: 10kev.txt  300muplot.ipynb  5kev.txt  BananaDrawer.ipynb  Bananachecks_all_isotopes.ipynb  Bananamaker_based_plots.ipynb  Bananamaker_plots.ipynb  CalibrationComparer.ipynb  Coulomb.ipynb  Echeck.ipynb  FIBI.ipynb  FracCalc.ipynb  GammaGated.ipynb  Loadingfiles_example.ipynb  PadCalibration.ipynb  SingleProton_plots.ipynb  Sorteddata_plots.ipynb  huh.ipynb  siprint.ipynb
analysis/python/Alphas/: Alphas.ipynb
analysis/python/GammaGates/: GammaGatedAlphas.ipynb  GammaGatedBetas.ipynb  GammaGatedGammas.ipynb  GammaGatedProtons.ipynb
analysis/python/PeakEstimation/: BetaEffectivity.ipynb  Fits_id1.ipynb  Fits_id1_sub2p.ipynb  Fits_id2.ipynb  Fits_id2_sub2p.ipynb  Fits_id3.ipynb  Fits_id3_sub2p.ipynb  GammaPeaks.ipynb  GammaPeaks_bg.ipynb  GrossBranchingDetermination.ipynb  README  SingleP.ipynb  Weightedmeans.ipynb  eg.ipynb  id1_estimation.ipynb  id2_estimation.ipynb  id3_estimation(nottobeused).ipynb  id3_estimation2.ipynb
analysis/python/dataplotting/: BananaDrawer.ipynb  Bananamaker_plots.ipynb
analysis/python/dataquality/: (outdated)Strip_calibration_check.ipynb  Aboveban_Si.ipynb  Al_Alphas.ipynb  Al_size_est.ipynb  All_iso_Bananachecks_U1.ipynb  All_iso_Bananachecks_U2&U3.ipynb  FinalAnalysis.ipynb  KS_test.ipynb  Loadingfiles_example.ipynb  Mg_size_est.ipynb  P_Alphas.ipynb  P_size_est.ipynb
analysis/python/twoproton/: 2p.ipynb  Na21_ensdf.txt  TwoProton.ipynb  fynbo.ipynb  other2p.ipynb
angle_effect/: CMakeLists.txt  EnergyEstimation.cpp  PadEE.cpp  README  SolidAngle.cpp  angle_effect.cpp
calibration/dssd_calibration/: CMakeLists.txt  analyse3aHists.cpp  analysePadVetoedHists.cpp  analyseProtonHists.cpp  compare.ipynb  draw3aHists.ipynb  drawPadVetoedHists.ipynb  drawPadVetoedHistsU6.ipynb  drawProtonHists.ipynb  drawProtonHists_U4.ipynb  drawProtonHists_U5.ipynb  make3aHists.cpp  makePadVetoedHists.cpp  makeProtonHists.cpp  printEnergyCorrections.cpp
calibration/pad_calibration/: CMakeLists.txt  PadCal.ipynb  PadCalibration.cpp  README  finder.cpp  padcalc.cfg
calibration/pad_calibration/include/: AnalysisConfig.h  CalibrationAnalysis.h  Detector_frib.h  Hit.h
calibration/ucal/: CMakeLists.txt  analyseProtonHists.cpp  calibration.ods  drawPadVetoedHists.ipynb  make3aHists.cpp
calibrations/: P2.cal  P4.cal  P6.cal  README.md  U4.cal  U5.cal
cmake/: projectutil.h
cuts/: totcuts.root  updatedgcuts.root
cuts/totcuts/: abovebanU1.txt  abovebanU2.txt  abovebanU3.txt  bananaU1.txt  bananaU2.txt  bananaU3.txt
cuts/updatedgcuts/: id0.txt  id1.txt  id2.txt  id3.txt  id5.txt
data/: 031_000m.root  032_000m.root  033_000m.root  034_000m.root  035_000m.root  052_000m.root  066_000m.root  070_001m.root
data/bananas/: bananas030_000mlio.root  bananas031_000mlio.root  bananas032_000mlio.root  bananas033_000mlio.root  bananas034_000mlio.root  bananas035_000mlio.root  bananas040_000mlio.root  bananas045_000mlio.root  bananas046_000mlio.root  bananas048_001mlio.root  bananas050_000mlio.root  bananas052_000mlio.root  bananas055_001mlio.root  bananas059_000mlio.root  bananas060_000mlio.root  bananas064_004mlio.root  bananas066_000mlio.root  bananas067_000mlio.root  bananas068_001mlio.root  bananas069_000mlio.root  bananas070_001mlio.root  bananas071_000mlio.root  bananas073_003mlio.root  bananas074_002mlio.root  combined.root
peakfindercheck/: CMakeLists.txt  peakfinder.cpp
setup/: 3a_U1-U2.json  3a_U3-U4.json  3a_U5.json  3a_U6.json  AUPAD_1458_00.json  AUPAD_500_00.json  AUPAD_500_01.json  AUW1_1000_00.json  AUW1_300_00.json  AUW1_50_00.json  AUW1_50_01.json  AUW1_60_01.json  AUW1_60_02.json  FRIB3a.json  G1.cal  G2.cal  G2old.cal  P1.cal  P1EE.cal  P1EE_2.cal  P1_alpha.cal  P2EE.cal  P2_alfa.cal  P3.cal  P3EE.cal  P3EE_2.cal  P3_alfa.cal  P4_alpha.cal  P4mult.cal  P6.cal  P6EE.cal  P6EE_2.cal  U1.cal  U1EE.cal  U1_sical(old).cal  U2.cal  U2EE.cal  U2_alpha.cal  U3.cal  U3EE.cal  (+16 more)
setup/oldcals/: P1_sical.cal  P2_sical.cal  P3_sical.cal  U1_sical.cal  U2_sical.cal  U3_sical(old).cal  U3_sical.cal  U5_sical.cal  U6.cal  U6_sical(old).cal
sim/: angle_effect.cpp
simdata/: angleeffect.root  beamholeSAM.txt
simdata/TRIM/: 2.99MeV52mu.txt  2.99MeV52mu10.txt  2.99MeV52mu20.txt  2.99MeV52mu25.txt  2.99MeV52mu5.txt  2.99MeV53mu20.txt  2.99MeV53mu30.txt  2.99MeV54mu.txt  2.99MeV54mu15.txt  2.99MeV54mu30.txt  2.99MeV54mu40.txt  2.99MeV54mu5.txt  4MeV52mu.txt  4MeV52mu10.txt  4MeV53mu.txt  4MeV53mu10.txt  4MeV53mu15.txt  4MeV53mu30.txt  4MeV53mu5.txt  4MeV54mu10.txt  4MeV54mu30.txt  4MeV58mu.txt  4MeV58mu15.txt  4MeV58mu20.txt  4MeV58mu25.txt  4MeV59mu15.txt  4MeV59mu20.txt  4MeV59mu25.txt  4MeV59mu30.txt  4MeV67mu10.txt  4MeV67mu15.txt  4MeV67mu30.txt  4MeV67mu5.txt  4MeV68mu.txt  4MeV68mu15.txt  4MeV68mu25.txt  4MeV68mu30.txt  4MeV69mu.txt  4MeV69mu10.txt  4MeV69mu15.txt  (+79 more)
simdata/TRIM/oldTRIM/: 2.99MeV52mu15.txt  2.99MeV52mu30.txt  2.99MeV53mu.txt  2.99MeV53mu10.txt  2.99MeV53mu15.txt  2.99MeV53mu25.txt  2.99MeV53mu40.txt  2.99MeV53mu5.txt  2.99MeV54mu10.txt  2.99MeV54mu20.txt  2.99MeV54mu25.txt  4MeV52mu15.txt  4MeV52mu20.txt  4MeV52mu25.txt  4MeV52mu30.txt  4MeV52mu5.txt  4MeV53mu20.txt  4MeV53mu25.txt  4MeV54mu.txt  4MeV54mu15.txt  4MeV54mu20.txt  4MeV54mu25.txt  4MeV54mu5.txt  4MeV58mu10.txt  4MeV58mu30.txt  4MeV58mu5.txt  (+30 more)
(+23 files in other folders)
